--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "blog-to-html",
   "version": "1.0.0",
   "type": "module",
-  "main": "run-cloude.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --env-file=.env server.js",
+    "dev": "node --env-file=.env server.js",
     "cloude": "node --env-file=.env run-cloude.js",
     "local": "node run-local.js"
   },
@@ -13,6 +14,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^4.21.2",
+    "mammoth": "^1.9.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "ollama": "^0.6.3"
   }
