feat: update alert and button components for improved styling; add new icon-box and section-header components; introduce select component; create status-alert for notifications; enhance global styles with custom scrollbar and background effects

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "pstart": "npm run build",
     "start": "node --env-file=.env server.js",
     "start:remote": "set OLLAMA_HOST=https://ollama.com&& npm start",
-    "start:local": "set OLLAMA_HOST=http://localhost:11434&& npm start"
+    "start:local": "set OLLAMA_HOST=http://localhost:11434&& npm start",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\" --names \"Backend,Frontend\" --prefix-colors \"blue,green\"",
+    "dev:backend": "nodemon",
+    "dev:frontend": "cd web && npm run dev"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +23,9 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "ollama": "^0.6.3"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11"
   }
 }
